# lora-edit

./: .gitignore  pyproject.toml
MultiLoRA/: MultiLoRA_hparams.py  __init__.py  compute_ks.py  compute_z.py  lora_editing_main.py  routing_lora_edit copy 2.py  routing_lora_edit copy.py  routing_lora_edit.py  routing_lora_edit_cw copy.py  routing_lora_edit_cw.py
experiments/: evaluate.py
hparams/Routing_LoRA_Edit/: EleutherAI_gpt-j-6B.json  gpt2-xl.json
hparams/Routing_LoRA_Edit_CW/: EleutherAI_gpt-j-6B.json  Llama3-8B.json  gpt2-xl.json
rome/: layer_stats.py
slurm_run/: alphaedit_gpt_xl_mcf_2000.sh  alphaedit_gptj_mcf_2000.sh  memit_gpt_xl_mcf_2000.sh  memit_gptj_mcf_2000.sh  routing_lora_edit_cw_gpt_xl_mcf_10000.sh  routing_lora_edit_cw_gpt_xl_mcf_2000.sh  routing_lora_edit_cw_gptj_mcf_10000.sh  routing_lora_edit_cw_gptj_mcf_2000.sh  routing_lora_edit_cw_llama3_mcf_10000.sh  routing_lora_edit_gpt_xl_mcf_10000.sh  routing_lora_edit_gpt_xl_mcf_2000.sh  routing_lora_edit_gptj_mcf_10000.sh  routing_lora_edit_gptj_mcf_2000.sh
