[project]
name = "alphaedit"
version = "0.1.0"
description = "ALPHAEDIT: NULL-SPACE CONSTRAINED KNOWLEDGE EDITING FOR LANGUAGE MODEL"
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch==2.6.0",
    "einops==0.8.1",
    "higher==0.2.1",
    "hydra-core==1.3.2",
    "transformers==4.51.3",
    "datasets==2.21.0",
    "matplotlib==3.10.3",
    "spacy>=3.7.0",
    "scipy==1.15.2",
    "scikit-learn==1.6.1",
    "nltk==3.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "AlphaEdit",
  "baselines",
  "dsets",
  "experiments",
  "glue_eval",
  "memit",
  "nse",
  "rome",
  "util",
]

